# kolomoni-backend

./: .editorconfig  .gitignore  Cargo.toml  Makefile.toml  README.md  _typos.toml  deny.toml
.postman/: api  api_b403c0f2-d834-4979-8775-ed01386f7cac
.sqlx/: query-022c988b109bc1cd91ce8799a60a89331b066da127a28ec57597031aecdcc384.json  query-02dd46fcf0c17225772661cfeea5e1c5ae4d25ce6393505bd3968bc7edc3d636.json  query-0610443b36c40c1cac9bd06e9033fbe06429b17822333681ce33ea3c1ad11fd3.json  query-0842cceeab99864ff01a2df53a948f730185ac192c56492110c5183c4da85327.json  query-0b4ce40283d4c1cfb9c8fc34cd6628ce84abe4257e114366d1c4dd148a7325fe.json  (+76 more)
kolomoni_api_client/: Cargo.toml
kolomoni_api_client/src/: authentication.rs  clients.rs  errors.rs  lib.rs  response.rs  server.rs  urls.rs
kolomoni_api_client/src/api/: health.rs  mod.rs
kolomoni_api_client/src/api/dictionary/: categories.rs  english.rs  mod.rs  slovene.rs
kolomoni_api_client/src/macros/: handlers.rs  mod.rs
kolomoni_api_client/src/request/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
kolomoni_auth/: Cargo.toml
kolomoni_auth/src/: hasher.rs  lib.rs  permissions.rs  roles.rs  token.rs
kolomoni_configuration/: Cargo.toml
kolomoni_configuration/src/: error.rs  lib.rs  structure.rs  traits.rs  utilities.rs
kolomoni_configuration/src/structure/: base_paths.rs  database.rs  http.rs  json_web_token.rs  logging.rs  mod.rs  search.rs  secrets.rs
kolomoni_core/: Cargo.toml
kolomoni_core/src/: edit.rs  id.rs  ids.rs  lib.rs  password_hasher.rs  permissions.rs  roles.rs  token.rs
kolomoni_core/src/api_models/: dictionary.rs  error_reason.rs  health.rs  mod.rs  users.rs
kolomoni_core/src/api_models/dictionary/: categories.rs  mod.rs  translations.rs
kolomoni_core/src/api_models/dictionary/english/: meaning.rs  mod.rs  word.rs
kolomoni_core/src/api_models/dictionary/slovene/: meaning.rs  mod.rs  word.rs
kolomoni_database/: Cargo.toml
kolomoni_database/src/: lib.rs  macros.rs  mutation.rs  query.rs  shared.rs
kolomoni_database/src/entities/: category.rs  mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  user.rs  user_permission.rs  user_role.rs  word.rs  word_category.rs  word_english.rs  word_slovene.rs  word_translation.rs  word_translation_suggestion.rs
kolomoni_database/src/entities/category/: model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/edit/: model.rs
kolomoni_database/src/entities/permission/: model.rs
kolomoni_database/src/entities/role/: model.rs
kolomoni_database/src/entities/user/: mod.rs  model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/user_role/: model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/word/: mod.rs  model.rs  mutation.rs
kolomoni_database/src/entities/word_english/: mod.rs  model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/word_english_meaning/: model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/word_meaning/: mod.rs  model.rs  query.rs
kolomoni_database/src/entities/word_meaning_translation/: model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/word_slovene/: mod.rs  model.rs  mutation.rs  query.rs
kolomoni_database/src/entities/word_slovene_meaning/: model.rs  mutation.rs  query.rs
kolomoni_database/src/impls/: word.rs
kolomoni_database/src/mutation/: category.rs  user.rs  user_permission.rs  user_permissions.rs  user_role.rs  users.rs  word.rs  word_category.rs  word_english.rs  word_slovene.rs  word_translation.rs  word_translation_suggestion.rs
kolomoni_database/src/query/: category.rs  user.rs  user_permission.rs  user_permissions.rs  user_role.rs  users.rs  word.rs  word_category.rs  word_english.rs  word_slovene.rs  word_translation.rs  word_translation_suggestion.rs
kolomoni_migrations/: Cargo.toml
kolomoni_migrations/migrations/M0001_initialize-database/: down.sql  migration.toml  up.sql
kolomoni_migrations/migrations/M0001_prepare-database/: down.sql  migration.toml  up.sql
kolomoni_migrations/migrations/M0001_set-up-basic-database/: migration.toml  up.sql
kolomoni_migrations/migrations/M0002_seed-permissions-and-roles/: down.rs  migration.toml  mod.rs  permissions.rs  shared.rs  up.rs
kolomoni_migrations/migrations/M0002_set-up-tables/: down.sql  migration.toml  up.sql
kolomoni_migrations/migrations/M0003_seed-permissions-and-roles/: down.rs  migration.toml  permissions.rs  roles.rs  up.rs
kolomoni_migrations/src/: cli.rs  errors.rs  lib.rs  m20230624_133941_create_users_table.rs  m20230624_170512_create_permissions_table.rs  m20230624_170512_initialize_permission_related_tables.rs  m20230624_175105_seed_permissions.rs  m20230624_177000_initialize_role_related_tables.rs  m20230624_177050_seed_roles.rs  m20240206_234618_create_word_tables.rs  m20240219_161147_create_word_suggestion_and_translation_tables.rs  m20240222_185323_create_category_related_tables.rs  main.rs  migrations.rs  sha256.rs
kolomoni_migrations/src/commands/: down.rs  generate.rs  initialize.rs  mod.rs  up.rs
kolomoni_migrations/src/models/: identifier.rs  mod.rs  remote.rs
kolomoni_migrations/src/models/local/: configuration.rs  mod.rs
kolomoni_migrations_core/: Cargo.toml
kolomoni_migrations_core/src/: configuration.rs  context.rs  errors.rs  identifier.rs  lib.rs  migrations.rs  remote.rs  sha256.rs
kolomoni_migrations_macros/: Cargo.toml
kolomoni_migrations_macros/src/: lib.rs
kolomoni_migrations_macros/src/migrations/: errors.rs  mod.rs  scan.rs
kolomoni_openapi/: Cargo.toml
kolomoni_openapi/src/: main.rs
kolomoni_search/: Cargo.toml
kolomoni_search/src/: cache.rs  lib.rs
kolomoni_test/: Cargo.toml
kolomoni_test/assets/: configuration.TESTING.toml  postgres-initialization-script.sh
kolomoni_test/tests/: general.rs  user.rs  words.rs
kolomoni_test/tests/end_to_end/: general.rs  main.rs  user.rs  words.rs
kolomoni_test_util/: Cargo.toml
kolomoni_test_util/src/: lib.rs  prelude.rs  response.rs  sample_categories.rs  sample_users.rs  sample_words.rs  server.rs
openapi/: Cargo.toml
openapi/src/: main.rs
src/: cli.rs  jwt.rs  (+4 more)
(+125 files in other folders)
