[package]
name = "kolomoni"
description = "Backend system for the Stari Kolomoni fantasy translation project."
license-file = "LICENSE.md"
version = "0.1.0"
edition = "2021"
authors = ["Grimpy101 <gorupgorazd@gmail.com>", "Simon Goričar <simon.peter.goricar@gmail.com>"]
rust-version = "1.65.0"
publish = false


[workspace]
members = [
    "kolomoni_auth",
    "kolomoni_configuration",
    "kolomoni_database",
    "kolomoni_migrations",
    "kolomoni_openapi"
]


[workspace.dependencies]
clap = { version = "4.4.18", features = ["derive"] }

tokio = { version = "1.36.0", features = ["full"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_with = { version = "3.6.0", features = ["chrono"] }
serde_json = "1.0.113"
toml = "0.8.10"

miette = "7.0.0"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-actix-web = "0.7.9"
dunce = "1.0.4"

actix-web = "4.5.1"
actix-utils = "3.0.1"
actix-cors = "0.7.0"


# The patched version contains some additional merging functionality that helps us make better documentation.
# utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "preserve_order"] }
# utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa = { git = "https://github.com/simongoricar/utoipa.git", rev = "fce3e3a1f1c6dede38eab8965ddf074a47196752", features = ["actix_extras", "chrono", "preserve_order"] }
utoipa-rapidoc = { git = "https://github.com/simongoricar/utoipa.git", rev = "fce3e3a1f1c6dede38eab8965ddf074a47196752", features = ["actix-web"] }

itertools = "0.12.1"
argon2 = "0.5.3"
jsonwebtoken = "9.2.0"
chrono = "0.4.33"
mime = "0.3.17"
uuid = { version = "1.7.0", features = ["v7"] }
governor = "0.6.0"
httpdate = "1.0.3"
futures-util = "0.3.30"
paste = "1.0.14"


[workspace.dependencies.sea-orm]
version = "0.12.14"
default-features = false
features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] 

[workspace.dependencies.sea-orm-migration]
version = "0.12.14"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]




[lib]
name = "kolomoni"
path = "./kolomoni/src/lib.rs"

[[bin]]
name = "kolomoni"
path = "./kolomoni/src/main.rs"


[dependencies]
kolomoni_migrations = { path = "./kolomoni_migrations" }
kolomoni_configuration = { path = "./kolomoni_configuration" }
kolomoni_auth = { path = "./kolomoni_auth" }
kolomoni_database = { path = "./kolomoni_database" }

clap = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-actix-web = { workspace = true }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }

actix-web = { workspace = true }
actix-utils = { workspace = true }
actix-cors = { workspace = true }

utoipa = { workspace = true }

sea-orm = { workspace = true }

dunce = { workspace = true }
chrono = { workspace = true }

itertools = { workspace = true }
mime = { workspace = true }
httpdate = { workspace = true }
futures-util = { workspace = true }
paste = { workspace = true }
