[package]
name = "kolomoni"
description = "Backend system for the Stari Kolomoni fantasy translation project."
license-file = "LICENSE.md"
version = "0.1.0"
edition = "2021"
authors = ["Grimpy101 <gorupgorazd@gmail.com>", "Simon Goričar <simon.peter.goricar@gmail.com>"]
rust-version = "1.65.0"
publish = false


[workspace]
members = [
    "kolomoni_auth",
    "kolomoni_configuration",
    # "kolomoni_database",
    "kolomoni_migrations",
    "kolomoni_migrations_core",
    "kolomoni_migrations_macros",
    "kolomoni_openapi",
    "kolomoni_search",
    "kolomoni_test",
    "kolomoni_test_util"
]


[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }

tokio = { version = "1.37.0", features = ["full"] }

serde = { version = "1.0.198", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["chrono"] }
serde_json = "1.0.116"
toml = "0.8.12"

miette = "7.2.0"
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-actix-web = "0.7.10"
dunce = "1.0.4"

actix-web = "4.5.1"
actix-http = "3.6.0"
actix-utils = "3.0.1"
actix-cors = "0.7.0"
actix-service = "2.0.2"


syn = "2.0.76"
quote = "1.0.37"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
paste = "1.0.15"


# The patched version contains some additional merging functionality that helps us make better documentation.
# utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "preserve_order"] }
# utoipa-rapidoc = { version = "3.0.0", features = ["actix-web"] }
utoipa = { git = "https://github.com/simongoricar/utoipa.git", rev = "fce3e3a1f1c6dede38eab8965ddf074a47196752", features = ["actix_extras", "chrono", "preserve_order"] }
utoipa-rapidoc = { git = "https://github.com/simongoricar/utoipa.git", rev = "fce3e3a1f1c6dede38eab8965ddf074a47196752", features = ["actix-web"] }

itertools = "0.12.1"

argon2 = "0.5.3"
sha2 = "0.10.8"

jsonwebtoken = "9.3.0"
chrono = "0.4.38"
http = "0.2.12"
mime = "0.3.17"
uuid = { version = "1.8.0", features = ["v7"] }
httpdate = "1.0.3"
futures-util = "0.3.30"
bytes = "1.6.0"
dotenvy = "0.15.7"

reqwest = "0.11.27"
tantivy = "0.22.0"
slotmap = "1.0.7"

pathdiff = "0.2.1"
path-slash = "0.2.1"

fs-more = "0.7.1"


[workspace.dependencies.sqlx]
version = "0.8.0"	
features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "chrono",
]


# [workspace.dependencies.sea-orm]
# version = "0.12.15"
# default-features = false
# features = [
#     "macros",
#     "with-chrono",
#     "with-uuid",
#     "runtime-tokio-rustls",
#     "sqlx-postgres",
# ] 
# 
# [workspace.dependencies.sea-orm-migration]
# version = "0.12.15"
# features = [
#     "runtime-tokio-rustls",
#     "sqlx-postgres"
# ]




[lib]
name = "kolomoni"
path = "./kolomoni/src/lib.rs"

[[bin]]
name = "kolomoni"
path = "./kolomoni/src/main.rs"


[dependencies]
kolomoni_migrations = { path = "./kolomoni_migrations" }
kolomoni_configuration = { path = "./kolomoni_configuration" }
kolomoni_auth = { path = "./kolomoni_auth" }
kolomoni_database = { path = "./kolomoni_database" }
kolomoni_search = { path = "./kolomoni_search" }

clap = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-actix-web = { workspace = true }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }

actix-web = { workspace = true }
actix-http = { workspace = true }
actix-utils = { workspace = true }
actix-cors = { workspace = true }

utoipa = { workspace = true }

# sea-orm = { workspace = true }
# sea-orm-migration = { workspace = true }

dunce = { workspace = true }
chrono = { workspace = true }

itertools = { workspace = true }
mime = { workspace = true }
httpdate = { workspace = true }
futures-util = { workspace = true }
paste = { workspace = true }



[features]
with_test_facilities = []


[profile.dev.build-override]
opt-level = 3

