[package]
name = "kolomoni_auth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
actix-web = { workspace = true }
# sea-orm = { workspace = true }
miette = { workspace = true }
actix-utils = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
