[package]
name = "kolomoni_auth"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kolomoni_core = { path = "../kolomoni_core" }


tokio = { workspace = true }

tracing = { workspace = true }

actix-web = { workspace = true }
actix-utils = { workspace = true }

# sea-orm = { workspace = true }
miette = { workspace = true }

thiserror = { workspace = true }

chrono = { workspace = true }

uuid = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

serde = { workspace = true }
serde_with = { workspace = true }
