[package]
name = "kolomoni_configuration"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = { workspace = true }

dunce = { workspace = true }
thiserror = { workspace = true }

tracing-subscriber = { workspace = true }
