[package]
name = "kolomoni_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }

utoipa = { workspace = true }


[features]
# Implements Deserialize on API response models and Serialize on 
# request models, allowing us to write clients for the API.
#
# `kolomoni` (the server), for obvious reasons, doesn't need this feature, 
# but for `kolomoni_api_client` for example does.
serde_impls_for_client_on_models = []
