[package]
name = "kolomoni_database"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kolomoni_auth = { path = "../kolomoni_auth" }
kolomoni_configuration = { path = "../kolomoni_configuration" }

thiserror = { workspace = true }
miette = { workspace = true }

# sea-orm = { workspace = true }

argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
