[package]
name = "kolomoni_database"
version = "0.1.0"
edition = "2021"

[dependencies]
kolomoni_auth = { path = "../kolomoni_auth" }

futures-core = { workspace = true }
futures-util = { workspace = true }
pin-project-lite = { workspace = true }

sqlx = { workspace = true }

thiserror = { workspace = true }

argon2 = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
