[package]
name = "kolomoni_migrations"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }

thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }

tracing = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

sha2 = { workspace = true }
chrono = { workspace = true }

fs-more = { workspace = true }

clap = { workspace = true }
