[package]
name = "kolomoni_migrations_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }

thiserror = { workspace = true }

sha2 = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }

syn = { workspace = true }
quote = { workspace = true }
paste = { workspace = true }
proc-macro2 = { workspace = true }

fs-more = { workspace = true }
pathdiff = { workspace = true }

