[package]
name = "kolomoni_migrations_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


[dependencies]
kolomoni_migrations_core = { path = "../kolomoni_migrations_core" }

tracing = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

fs-more = { workspace = true }
pathdiff = { workspace = true }

chrono = { workspace = true }

syn = { workspace = true }
quote = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
