[package]
name = "kolomoni_openapi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kolomoni_core = { path = "../kolomoni_core" }

actix-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }
miette = { workspace = true }
