[package]
name = "kolomoni_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
kolomoni = { path = "..", features = ["with_test_facilities"] }
kolomoni_test_util = { path = "../kolomoni_test_util" }

tokio = { workspace = true }
chrono = { workspace = true }
