[package]
name = "kolomoni_test_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kolomoni = { path = "..", features = ["with_test_facilities"] }
kolomoni_auth = { path = "../kolomoni_auth" }
kolomoni_database = { path = "../kolomoni_database" }
kolomoni_configuration = { path = "../kolomoni_configuration" }

actix-web = { workspace = true }
actix-http = { workspace = true }
actix-cors = { workspace = true }
actix-service = { workspace = true }

http = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tracing-actix-web = { workspace = true }

miette = { workspace = true }
tokio = { workspace = true }
# sea-orm = { workspace = true }

bytes = { workspace = true }
uuid = { workspace = true }
