[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stari-kolomoni-backend = { path = ".." }
actix-web = "4.3.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-actix-web = "0.7.5"
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono", "preserve_order"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
anyhow = "1.0.71"